--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:45.936061Z",
-     "start_time": "2023-11-29T11:39:45.903462Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -20,12 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:45.954932Z",
-     "start_time": "2023-11-29T11:39:45.909676Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -43,12 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:46.073947Z",
-     "start_time": "2023-11-29T11:39:45.932740Z"
-    }
+    "is_executing": true
    },
    "outputs": [
     {
@@ -68,7 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -86,23 +80,13 @@
    ],
    "source": [
     "print(original_image)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:46.074800Z",
-     "start_time": "2023-11-29T11:39:46.071589Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:46.079214Z",
-     "start_time": "2023-11-29T11:39:46.075168Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -115,12 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:46.763778Z",
-     "start_time": "2023-11-29T11:39:46.078433Z"
-    }
+    "is_executing": true
    },
    "outputs": [
     {
@@ -149,12 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:46.855010Z",
-     "start_time": "2023-11-29T11:39:46.763942Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -166,12 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:46.979750Z",
-     "start_time": "2023-11-29T11:39:46.917419Z"
-    }
+    "is_executing": true
    },
    "outputs": [
     {
@@ -192,12 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.116201Z",
-     "start_time": "2023-11-29T11:39:46.991927Z"
-    }
+    "is_executing": true
    },
    "outputs": [
     {
@@ -216,12 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.317301Z",
-     "start_time": "2023-11-29T11:39:47.171544Z"
-    }
+    "is_executing": true
    },
    "outputs": [
     {
@@ -240,7 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -257,18 +229,14 @@
     "array_transform = transform.s_tranform_forward(array)\n",
     "print(f\"Array modificado: {array_transform}\")\n",
     "    "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.318478Z",
-     "start_time": "2023-11-29T11:39:47.315620Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -282,26 +250,22 @@
     "### S-transform Inverse ###\n",
     "array_inv = transform.s_transform_inverse(array_transform)\n",
     "print(f\"Array invertido: {array_inv}\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.322721Z",
-     "start_time": "2023-11-29T11:39:47.318810Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[356 367 385 ...  51   9  -2]\n",
-      " [384 407 435 ...  -6   5  11]\n",
-      " [421 432 469 ...  22  -8 -14]\n",
+      "[[436 525 615 ...  51   9  -2]\n",
+      " [553 666 783 ...  -6   5  11]\n",
+      " [641 783 920 ...  22  -8 -14]\n",
       " ...\n",
       " [ 11  25  -1 ...  -1 -53  31]\n",
       " [ 18  15  11 ...  69 -17  -8]\n",
@@ -311,39 +275,31 @@
    ],
    "source": [
     "### S-transform Forward image ###\n",
-    "transform_image = Wavelet(original_image, 1)\n",
+    "transform_image = Wavelet(original_image, 3)\n",
     "#print(len(original_image[0][0]))\n",
     "transform_forward = transform_image.handle_transform_forward()\n",
     "print(transform_forward)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.482120Z",
-     "start_time": "2023-11-29T11:39:47.322996Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "### S-transform Reverse image ###\n",
-    "transform_image_reverse = Wavelet(transform_forward, 1)\n",
+    "transform_image_reverse = Wavelet(transform_forward, 3)\n",
     "transform_reverse = transform_image_reverse.handle_transform_inverse()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.641972Z",
-     "start_time": "2023-11-29T11:39:47.640424Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -361,18 +317,14 @@
    ],
    "source": [
     "print(transform_reverse)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.646667Z",
-     "start_time": "2023-11-29T11:39:47.642422Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -391,17 +343,11 @@
    "source": [
     "print(original_image)\n",
     " "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:47.650577Z",
-     "start_time": "2023-11-29T11:39:47.645177Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Classe 17/09\n",
     "Predicció:\n",
@@ -415,39 +361,54 @@
     "###### TODO\n",
     "Predict sobre una matriu. -> ha de ser invertible -> img de 512 512\n",
     "Calcular entropia del resultat X' -> H(x') <= H(x)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Original entropy  10.431490855522489\n",
-      "Pred entropy:  20.862981711045112\n"
+      "Pred entropy:  7.017758012788629\n",
+      "\n",
+      "La imagen devuelta es:\n",
+      "[[[356 359 386 ... 415 398 389]\n",
+      "  [351 362 363 ... 417 405 398]\n",
+      "  [355 363 394 ... 419 398 414]\n",
+      "  ...\n",
+      "  [361 375 414 ... 436 417 414]\n",
+      "  [331 341 374 ... 442 380 406]\n",
+      "  [332 344 354 ... 406 398 368]]]\n",
+      "\n",
+      "La imagen original es:\n",
+      "[[[356 359 386 ... 415 398 389]\n",
+      "  [351 362 363 ... 417 405 398]\n",
+      "  [355 363 394 ... 419 398 414]\n",
+      "  ...\n",
+      "  [361 375 414 ... 436 417 414]\n",
+      "  [331 341 374 ... 442 380 406]\n",
+      "  [332 344 354 ... 406 398 368]]]\n"
      ]
     }
    ],
    "source": [
     "pred = Prediction(original_image)\n",
-    "mat_pred = pred.predict_image_LOP()\n",
+    "mat_pred = pred.predict_image()\n",
     "statistics_data_pred = statistics(mat_pred)\n",
-    "entropy_pred = statistics_data.compute_entropy()\n",
+    "entropy_pred = statistics_data_pred.compute_entropy()\n",
     "print(\"Original entropy \",entropy)\n",
-    "print(\"Pred entropy: \", entropy_pred)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T11:39:48.133856Z",
-     "start_time": "2023-11-29T11:39:47.686158Z"
-    }
-   }
+    "print(\"Pred entropy: \", entropy_pred)\n",
+    "#invert = Prediction(mat_pred)\n",
+    "image_rebuilt = invert_image(mat_pred)\n",
+    "print(f\"\\nLa imagen devuelta es:\\n{image_rebuilt}\")\n",
+    "print(f\"\\nLa imagen original es:\\n{original_image}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -466,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "toc-autonumbering": true
  },
