All done at the moment

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:13.175330Z",
+     "start_time": "2023-12-01T09:36:12.889319Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -17,9 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:13.175631Z",
+     "start_time": "2023-12-01T09:36:13.037216Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -37,9 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:13.292832Z",
+     "start_time": "2023-12-01T09:36:13.080378Z"
+    }
    },
    "outputs": [
     {
@@ -59,9 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:13.297980Z",
+     "start_time": "2023-12-01T09:36:13.292127Z"
+    }
    },
    "outputs": [
     {
@@ -84,9 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:13.302816Z",
+     "start_time": "2023-12-01T09:36:13.297117Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,9 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.050784Z",
+     "start_time": "2023-12-01T09:36:13.301326Z"
+    }
    },
    "outputs": [
     {
@@ -130,9 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.144266Z",
+     "start_time": "2023-12-01T09:36:14.049245Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -144,9 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.277041Z",
+     "start_time": "2023-12-01T09:36:14.224052Z"
+    }
    },
    "outputs": [
     {
@@ -167,9 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.421858Z",
+     "start_time": "2023-12-01T09:36:14.332600Z"
+    }
    },
    "outputs": [
     {
@@ -188,9 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.619085Z",
+     "start_time": "2023-12-01T09:36:14.486662Z"
+    }
    },
    "outputs": [
     {
@@ -209,9 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.624252Z",
+     "start_time": "2023-12-01T09:36:14.620875Z"
+    }
    },
    "outputs": [
     {
@@ -233,9 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.630064Z",
+     "start_time": "2023-12-01T09:36:14.625410Z"
+    }
    },
    "outputs": [
     {
@@ -254,9 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:14.853077Z",
+     "start_time": "2023-12-01T09:36:14.629147Z"
+    }
    },
    "outputs": [
     {
@@ -283,9 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:15.076865Z",
+     "start_time": "2023-12-01T09:36:14.862485Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -296,9 +338,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:15.082228Z",
+     "start_time": "2023-12-01T09:36:15.077223Z"
+    }
    },
    "outputs": [
     {
@@ -321,9 +366,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:15.084662Z",
+     "start_time": "2023-12-01T09:36:15.081471Z"
+    }
    },
    "outputs": [
     {
@@ -365,9 +413,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:35.187240Z",
+     "start_time": "2023-12-01T09:36:34.323749Z"
+    }
    },
    "outputs": [
     {
@@ -375,7 +426,27 @@
      "output_type": "stream",
      "text": [
       "Original entropy  10.431490855522489\n",
-      "Pred entropy:  7.017758012788629\n",
+      "Pred entropy:  7.017758012788629\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = Prediction(original_image)\n",
+    "mat_pred = pred.predict_image()\n",
+    "statistics_data_pred = statistics(mat_pred)\n",
+    "entropy_pred = statistics_data_pred.compute_entropy()\n",
+    "print(\"Original entropy \",entropy)\n",
+    "print(\"Pred entropy: \", entropy_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "La imagen devuelta es:\n",
       "[[[356 359 386 ... 415 398 389]\n",
@@ -398,17 +469,27 @@
     }
    ],
    "source": [
-    "pred = Prediction(original_image)\n",
-    "mat_pred = pred.predict_image()\n",
-    "statistics_data_pred = statistics(mat_pred)\n",
-    "entropy_pred = statistics_data_pred.compute_entropy()\n",
-    "print(\"Original entropy \",entropy)\n",
-    "print(\"Pred entropy: \", entropy_pred)\n",
     "#invert = Prediction(mat_pred)\n",
     "image_rebuilt = invert_image(mat_pred)\n",
     "print(f\"\\nLa imagen devuelta es:\\n{image_rebuilt}\")\n",
-    "print(f\"\\nLa imagen original es:\\n{original_image}\")\n"
-   ]
+    "print(f\"\\nLa imagen original es:\\n{original_image}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T09:36:35.862419Z",
+     "start_time": "2023-12-01T09:36:35.253111Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
