Error Pae bien-mal

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -413,11 +413,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:35.187240Z",
-     "start_time": "2023-12-01T09:36:34.323749Z"
+     "end_time": "2023-12-01T10:12:45.622388Z",
+     "start_time": "2023-12-01T10:12:44.773524Z"
     }
    },
    "outputs": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -477,8 +477,137 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:35.862419Z",
-     "start_time": "2023-12-01T09:36:35.253111Z"
+     "end_time": "2023-12-01T10:13:11.237288Z",
+     "start_time": "2023-12-01T10:13:10.590255Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pae: 0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### PAE ###\n",
+    "pae = Metrics(original_image, image_rebuilt)\n",
+    "print(f\"Pae: {pae.calculate_pae()}\")\n",
+    "print(pae.PAE_data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T10:14:16.228416Z",
+     "start_time": "2023-12-01T10:14:16.119001Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Clase 1/12\n",
+    "X -> Predicto -> Q -> Q-1 -> Pred-1 -> X^-> PAE(X,X^)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check Quantize: [[[35.  0.  2. ...  0. -1.  0.]\n",
+      "  [ 0.  0.  0. ... -1.  0.  0.]\n",
+      "  [ 0.  0.  3. ...  0. -1.  1.]\n",
+      "  ...\n",
+      "  [-1.  0.  3. ... -1. -1.  0.]\n",
+      "  [-3. -1.  0. ...  1. -5.  0.]\n",
+      "  [ 0.  0.  0. ... -1.  0. -2.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = Prediction(original_image)\n",
+    "pred_x = pred.predict_image()\n",
+    "quantize = Quantizer(1, 10)\n",
+    "image_data_quantized = ImageRaw.get_image_structure_empty()\n",
+    "quantize.quantize(pred_x, image_data_quantized)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T10:14:20.300837Z",
+     "start_time": "2023-12-01T10:14:19.050572Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [],
+   "source": [
+    "dequantize = Quantizer(1, 10)\n",
+    "image_data_dequantized = ImageRaw.get_image_structure_empty()\n",
+    "dequantize.dequantize(image_data_quantized, image_data_dequantized)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T10:14:20.390666Z",
+     "start_time": "2023-12-01T10:14:20.299Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [],
+   "source": [
+    "inv_pred = invert_image(image_data_dequantized)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T10:14:20.715890Z",
+     "start_time": "2023-12-01T10:14:20.608911Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pae: 3315.0\n",
+      "3315.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### PAE ###\n",
+    "pae = Metrics(inv_pred, image_data_dequantized)\n",
+    "print(f\"Pae: {pae.calculate_pae()}\")\n",
+    "print(pae.PAE_data)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T10:14:20.987967Z",
+     "start_time": "2023-12-01T10:14:20.870873Z"
     }
    }
   },
