--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -586,28 +586,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pae: 3315.0\n",
-      "3315.0\n"
+      "Pae: 3323.0\n",
+      "3323.0\n"
      ]
     }
    ],
    "source": [
     "### PAE ###\n",
-    "pae = Metrics(inv_pred, image_data_dequantized)\n",
+    "pae = Metrics(inv_pred, pred_x)\n",
     "print(f\"Pae: {pae.calculate_pae()}\")\n",
     "print(pae.PAE_data)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:14:20.987967Z",
-     "start_time": "2023-12-01T10:14:20.870873Z"
+     "end_time": "2023-12-01T10:26:41.880594Z",
+     "start_time": "2023-12-01T10:26:41.781721Z"
     }
    }
   },
