TCI Quantización con Perdida

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:13.175330Z",
-     "start_time": "2023-12-01T09:36:12.889319Z"
+     "end_time": "2023-12-15T09:45:33.249964Z",
+     "start_time": "2023-12-15T09:45:33.209923Z"
     }
    },
    "outputs": [],
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:13.175631Z",
-     "start_time": "2023-12-01T09:36:13.037216Z"
+     "end_time": "2023-12-15T09:45:33.250246Z",
+     "start_time": "2023-12-15T09:45:33.213557Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:13.292832Z",
-     "start_time": "2023-12-01T09:36:13.080378Z"
+     "end_time": "2023-12-15T09:45:33.367917Z",
+     "start_time": "2023-12-15T09:45:33.306873Z"
     }
    },
    "outputs": [
@@ -68,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:13.297980Z",
-     "start_time": "2023-12-01T09:36:13.292127Z"
+     "end_time": "2023-12-15T09:45:33.369059Z",
+     "start_time": "2023-12-15T09:45:33.365216Z"
     }
    },
    "outputs": [
@@ -96,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:13.302816Z",
-     "start_time": "2023-12-01T09:36:13.297117Z"
+     "end_time": "2023-12-15T09:45:33.374495Z",
+     "start_time": "2023-12-15T09:45:33.370087Z"
     }
    },
    "outputs": [],
@@ -114,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.050784Z",
-     "start_time": "2023-12-01T09:36:13.301326Z"
+     "end_time": "2023-12-15T09:45:34.130422Z",
+     "start_time": "2023-12-15T09:45:33.425782Z"
     }
    },
    "outputs": [
@@ -126,13 +126,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check Quantize: [[[35. 35. 38. ... 41. 39. 38.]\n",
-      "  [35. 36. 36. ... 41. 40. 39.]\n",
-      "  [35. 36. 39. ... 41. 39. 41.]\n",
-      "  ...\n",
-      "  [36. 37. 41. ... 43. 41. 41.]\n",
-      "  [33. 34. 37. ... 44. 38. 40.]\n",
-      "  [33. 34. 35. ... 40. 39. 36.]]]\n",
       "Entropia: 7.1184477268956465\n"
      ]
     }
@@ -148,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.144266Z",
-     "start_time": "2023-12-01T09:36:14.049245Z"
+     "end_time": "2023-12-15T09:45:34.220580Z",
+     "start_time": "2023-12-15T09:45:34.127940Z"
     }
    },
    "outputs": [],
@@ -165,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.277041Z",
-     "start_time": "2023-12-01T09:36:14.224052Z"
+     "end_time": "2023-12-15T09:45:34.351209Z",
+     "start_time": "2023-12-15T09:45:34.233058Z"
     }
    },
    "outputs": [
@@ -191,11 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.421858Z",
-     "start_time": "2023-12-01T09:36:14.332600Z"
+     "end_time": "2023-12-15T09:45:34.495289Z",
+     "start_time": "2023-12-15T09:45:34.409630Z"
     }
    },
    "outputs": [
@@ -215,11 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.619085Z",
-     "start_time": "2023-12-01T09:36:14.486662Z"
+     "end_time": "2023-12-15T09:45:34.698119Z",
+     "start_time": "2023-12-15T09:45:34.542787Z"
     }
    },
    "outputs": [
@@ -239,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.624252Z",
-     "start_time": "2023-12-01T09:36:14.620875Z"
+     "end_time": "2023-12-15T09:45:34.699530Z",
+     "start_time": "2023-12-15T09:45:34.696354Z"
     }
    },
    "outputs": [
@@ -266,11 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.630064Z",
-     "start_time": "2023-12-01T09:36:14.625410Z"
+     "end_time": "2023-12-15T09:45:34.704818Z",
+     "start_time": "2023-12-15T09:45:34.699984Z"
     }
    },
    "outputs": [
@@ -290,11 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:14.853077Z",
-     "start_time": "2023-12-01T09:36:14.629147Z"
+     "end_time": "2023-12-15T09:45:34.910217Z",
+     "start_time": "2023-12-15T09:45:34.702728Z"
     }
    },
    "outputs": [
@@ -322,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:15.076865Z",
-     "start_time": "2023-12-01T09:36:14.862485Z"
+     "end_time": "2023-12-15T09:45:35.111329Z",
+     "start_time": "2023-12-15T09:45:34.911943Z"
     }
    },
    "outputs": [],
@@ -338,11 +331,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:15.082228Z",
-     "start_time": "2023-12-01T09:36:15.077223Z"
+     "end_time": "2023-12-15T09:45:35.115843Z",
+     "start_time": "2023-12-15T09:45:35.111756Z"
     }
    },
    "outputs": [
@@ -366,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T09:36:15.084662Z",
-     "start_time": "2023-12-01T09:36:15.081471Z"
+     "end_time": "2023-12-15T09:45:35.120211Z",
+     "start_time": "2023-12-15T09:45:35.115272Z"
     }
    },
    "outputs": [
@@ -409,11 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:12:45.622388Z",
-     "start_time": "2023-12-01T10:12:44.773524Z"
+     "end_time": "2023-12-15T09:45:35.925903Z",
+     "start_time": "2023-12-15T09:45:35.130457Z"
     }
    },
    "outputs": [
@@ -437,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "outputs": [
     {
      "name": "stdout",
@@ -473,14 +466,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:13:11.237288Z",
-     "start_time": "2023-12-01T10:13:10.590255Z"
+     "end_time": "2023-12-15T09:45:36.589310Z",
+     "start_time": "2023-12-15T09:45:35.924416Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "outputs": [
     {
      "name": "stdout",
@@ -500,8 +493,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:14:16.228416Z",
-     "start_time": "2023-12-01T10:14:16.119001Z"
+     "end_time": "2023-12-15T09:45:36.703482Z",
+     "start_time": "2023-12-15T09:45:36.653822Z"
     }
    }
   },
@@ -517,22 +510,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Check Quantize: [[[35.  0.  2. ...  0. -1.  0.]\n",
-      "  [ 0.  0.  0. ... -1.  0.  0.]\n",
-      "  [ 0.  0.  3. ...  0. -1.  1.]\n",
-      "  ...\n",
-      "  [-1.  0.  3. ... -1. -1.  0.]\n",
-      "  [-3. -1.  0. ...  1. -5.  0.]\n",
-      "  [ 0.  0.  0. ... -1.  0. -2.]]]\n"
-     ]
-    }
-   ],
+   "execution_count": 43,
+   "outputs": [],
    "source": [
     "pred = Prediction(original_image)\n",
     "pred_x = pred.predict_image()\n",
@@ -543,14 +522,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:14:20.300837Z",
-     "start_time": "2023-12-01T10:14:19.050572Z"
+     "end_time": "2023-12-15T09:45:37.913151Z",
+     "start_time": "2023-12-15T09:45:36.751932Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "dequantize = Quantizer(1, 10)\n",
@@ -560,14 +539,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:14:20.390666Z",
-     "start_time": "2023-12-01T10:14:20.299Z"
+     "end_time": "2023-12-15T09:45:38.005441Z",
+     "start_time": "2023-12-15T09:45:37.970068Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "inv_pred = invert_image(image_data_dequantized)\n"
@@ -575,14 +554,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:14:20.715890Z",
-     "start_time": "2023-12-01T10:14:20.608911Z"
+     "end_time": "2023-12-15T09:45:38.162110Z",
+     "start_time": "2023-12-15T09:45:38.005987Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
@@ -602,18 +581,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T10:26:41.880594Z",
-     "start_time": "2023-12-01T10:26:41.781721Z"
+     "end_time": "2023-12-15T09:45:38.286060Z",
+     "start_time": "2023-12-15T09:45:38.180799Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-15T09:45:38.286415Z",
+     "start_time": "2023-12-15T09:45:38.284133Z"
+    }
    }
   }
  ],
